Fix broken css

--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: top;
 }
 .abt img {
     display: block;
@@ -117,7 +116,7 @@ header {
     position: relative;
     background-position: 0% 50%;
     background-size: cover;
-    background-attatchment: scroll;
+    background-attachment: scroll;
     background-clip: border-box;
     background-image: url(../images/bg.jpg);
     background-repeat: no-repeat;
